# AMR-project

./: README.md  Simulation environment setup.pptx
ts6_ws/src/ts6_bluerov2_perception/: CMakeLists.txt  package.xml
ts6_ws/src/ts6_bluerov2_perception/config/: ekf_params_imu_only.yaml  ekf_params_imu_only_3d.yaml  ekf_params_with_fiducial.yaml  ekf_params_with_fiducial_3d.yaml
ts6_ws/src/ts6_bluerov2_perception/launch/: aruco_detect.launch  bridge.launch  fiducial_slam.launch  run.launch  run_original.launch  swimming_pool.launch  upload.launch
ts6_ws/src/ts6_bluerov2_perception/markers/marker0/: model.sdf
ts6_ws/src/ts6_bluerov2_perception/markers/marker0 copy/: model-1_4.sdf  model-1_5.sdf  model.sdf
ts6_ws/src/ts6_bluerov2_perception/markers/marker1/: model-1_4.sdf  model-1_5.sdf  (+1 more)
ts6_ws/src/ts6_bluerov2_perception/meshes/: README.md  bluerov2_propccw.dae  bluerov2_propcw.dae  ping1d.dae
ts6_ws/src/ts6_bluerov2_perception/robots/: altimeter.xacro  altimeter_sss.xacro  default.xacro
ts6_ws/src/ts6_bluerov2_perception/rviz/: bluerov2_perception.rviz
ts6_ws/src/ts6_bluerov2_perception/script/: pressure_to_depth.py
ts6_ws/src/ts6_bluerov2_perception/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  actuators.xacro  base.xacro  bridge2.urdf  gazebo.xacro  sensors.xacro  snippets.xacro
ts6_ws/src/ts6_bluerov2_perception/worlds/: auv_underwater_world.world  mangalia.world  ocean_swimmingpool.world  ocean_swimmingpool2.world  ocean_swimmingpool3.world  ocean_waves_dark.world  ocean_waves_default.world  ocean_waves_high_current.world  ocean_waves_very_dark.world
(+71 files in other folders)
